# lumen-later

./: .env.example  .eslintrc.cjs  .gitignore  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.claude/: .gitignore
.github/workflows/: ci.yml  deploy.yml
.stellar/contract-ids/testnet/: all-contracts.json  bnpl-core.json  lp-token.json  usdc-token.json
apps/web/: .env.example  .eslintrc.json  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/web/prisma/: schema.postgres.prisma  schema.prisma
apps/web/scripts/: seed-test-merchant.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/activity/: page.tsx
apps/web/src/app/admin/: layout.tsx  page.tsx
apps/web/src/app/faucet/: page.tsx
apps/web/src/app/lending/: page.tsx
apps/web/src/app/merchant/: layout.tsx  page.tsx
apps/web/src/app/user/: page.tsx
apps/web/src/components/admin/: MetricCard.tsx  RecentActivityList.tsx  index.ts
apps/web/src/components/bill/: BillDetailCard.tsx
apps/web/src/components/charts/: APYHistoryChart.tsx
apps/web/src/components/layout/: header.tsx
apps/web/src/components/lending/: lending-section.tsx
apps/web/src/components/merchant/: merchant-auth-check.tsx
apps/web/src/components/shared/: metric-card.tsx
apps/web/src/components/ui/: back-button.tsx  button.tsx  calendar.tsx  dialog.tsx  error-message.tsx  input.tsx  loading-spinner.tsx  logo.tsx  select.tsx  use-toast.tsx
apps/web/src/config/: admin.ts  contracts.ts
apps/web/src/constants/: config.ts  errors.ts
apps/web/src/contexts/: data-context.tsx
apps/web/src/hooks/: use-merchant.ts
apps/web/src/lib/: error-handler.ts  event-parser.ts  prisma-postgres.ts  scval-parser.ts  stellar-wallets-kit.ts  utils.ts
apps/web/src/services/: event-indexer.service.ts  merchant-application.service.ts
apps/web/src/styles/: globals.css
apps/web/src/types/: merchant.ts  stellar.ts
apps/web/src/utils/: format.ts  migrate-merchant-data.ts
contracts/: Cargo.toml  lcov.info
contracts/bnpl_core/: Cargo.toml
contracts/bnpl_core/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/bnpl_core_interface/: Cargo.toml
contracts/bnpl_core_interface/src/: lib.rs
contracts/integration_test/: Cargo.toml
contracts/integration_test/src/: lib.rs
contracts/lp_token/: Cargo.toml
contracts/lp_token/src/: lib.rs  tests.rs
contracts/lp_token_interface/: Cargo.toml
contracts/lp_token_interface/src/: lib.rs
contracts/usdc_token/: Cargo.toml
contracts/usdc_token/src/: lib.rs
docs/: EVENT_INDEXER.md  SCF39_WORK_PLAN.md  TODO.md  checkout-api-design.md  checkout-api.md
docs/architecture/: contract-interactions.md  data-flow.md  system-architecture.md  system-overview.md
docs/contracts/: bnpl-core.md  lp-token.md  test-coverage.md  usdc-token.md
docs/protocol/: whitepaper.md
indexer/: pipeline.yaml
scripts/: calculate_apr.py  deploy-contracts.mjs  env-select.mjs  fund-account.mjs  generate-bindings.mjs  manage-admins.mjs  network-setup.mjs
(+72 files in other folders)
